# localbricks

./: .gitignore  Dockerfile  Makefile  PROJECT.MD  README.md  REFACTOR.md  SECURITY_UPDATE.md  bundle_config_schema.json  databricks.yml  deploy_bundle.sh  docker-compose.yaml  entrypoint.sh  formulas.py  pyproject.toml  replace_company_name.py  requirements.snapshot.txt  setup.py
.github/workflows/: test-and-build.yml
data_quality_clients/: data_quality.yml
deus_lib/: __init__.py
deus_lib/abstract/: abstract_task.py  pipeline_factory.py
deus_lib/bronze_factory/: bronze_pydantic_validation.py  csv_files_processor.py  file_processor_base.py  merge_dfs_task.py  xml_files_processor.py
deus_lib/great_expectations/: dq_factory.py
deus_lib/landing_factory/: files_loader_task.py  landing_pydantic_validation.py  uncompress_and_load_zip.py
deus_lib/localbricks/: delta_sharing_loader.py  local_data_loader_base.py  local_storage_loader.py  localbricks_factory.py
deus_lib/silver_factory/: silver_base_task.py  silver_behaviours_base_task.py  silver_pydantic_validation.py
deus_lib/utils/: LoggerSingleton.py  common.py  decorators.py  pydantic_validation.py  reason_constants.py  sfoc_calculator.py  sparksession.py  trim_calculator.py
docs/: api.md  config_guide.md  developer_guide.md  pull_request_template.md
localbricks/: config.share  dataframe_new_colunmn.csv  df_after_explode.csv  df_before_explode.csv  final_df.csv  gero_test_vs.py  local_tables_config.json  readme.md  reconcilate_task_test.py  source_data_after_gx.csv  test_gx.py
localbricks/dq_results_local_tests/: test_catalog_test_schema_test_table.csv
resources/: jobs.yml
src/prepare_databricks_workspace/: config_s3_external_location.json  setup_unity_catalog.py
src/tasks/bronze/: bronze_file_ingestion.py  constants.py  data_expectations.py  merge_data_task.py
src/tasks/clients/: common_behaviours.py  common_merge.py
src/tasks/dds/: README.md  common_behaviours.py  common_merge.py
src/tasks/golden/: generate_obt.py
src/tasks/landing/: landing_task.py
src/tasks/silver/: create_ctas_task.py
tests/: test_job_config.py  test_job_layer.py  test_job_loader.py  test_merge_jobs_main.py
tests/test_data/: custom_task.py  custom_task_etl-settings.vs.yml  invalid_etl-settings.vs.yml  job_cluster.yml  job_libraries.yml  landing_job_config.yml  valid_etl-settings.template.yml  valid_etl-settings.vs.yml
workflow_definition/clients_jobs/: etl-settings.template.yml
workflow_definition/job_helper/: jobs_loader.py  merge_jobs.py  outer_job_build.py  task_builder.py  task_loader.py  utils.py
workflow_definition/job_helper/model/: file_parser.py  file_pattern.py  job.py  job_config.py  job_layer.py  task.py
workflow_definition/shared/: job_cluster.yml  job_libraries.yml
(+42 files in other folders)
