[tool.poetry]
name = "deus_pipelines"
version = "0.1.0"
description = "Localbricks is a library for building and running pipelines with Databricks Assets Bundle. "
authors = ["DEUS DataAvengers <dataavengers@deus.ai>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "workflow_definition" }
]

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
idna = "3.10"
oauthlib = "3.2.2"
prompt-toolkit = "3.0.50"
pydantic = "2.9.2"
pydantic_core = "2.23.4"
PyJWT = "2.10.1"
PyYAML = "6.0.2"
setuptools = "78.1.0"
typer = "0.15.2"
typing_extensions = "4.13.0"
urllib3 = "2.3.0"
wcwidth = "0.2.13"
wheel = "0.43.0"
pyspark = "3.5.5"
boto3 = "1.37.26"
gitpython = "^3.1.43"
great-expectations = "0.18.22"
pytest = "^8.2.2"
pyarrow = "^19.0.1"
fuzzywuzzy = "^0.18.0"
scipy = "^1.14.0"
numpy = "1.26.4"
cyclonedx-python-lib = "9.1.0"
filelock = "3.18.0"
psutil = "7.0.0"
py-serializable = "2.0.0"
safety-schemas = "0.0.12"
sympy = "1.13.3"

[tool.poetry.group.dev.dependencies]
cibuildwheel = "^2.19.1"

[build-system]
requires = ["poetry-core>=1.0.0", "cibuildwheel"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.group.build.dependencies]
setuptools = "^78.1.0"
wheel = "^0.43.0"